package common.message;

message DataPacket
{
    enum DataPacketType
    {
        Info = 1;
        Video = 2;
        Audio = 3;
        Command = 4;
        Request = 5;
        RequestFeedback = 6;
        SharedMessage = 7;
        SharedFile = 8;
        FindMyPhone = 9;
        KeyboardEvent = 10;
    }

    required DataPacketType dataPacketType = 1;
    optional Info info = 2;
    optional Video video = 3;
    optional Audio audio = 4;
    optional Command command = 5;
    optional Request request = 6;
    optional RequestFeedback requestFeedback = 7;
    optional SharedMessage sharedMessage = 8;
    optional SharedFile sharedFile = 9;
    optional KeyboardEvent keyboardEvent = 10;
    optional bytes timeStamp = 11;
}

message Command
{
    enum CommandType
    {
        Minimize = 1;
        ShowDesktop = 2;
        ShutDownApp = 3;
        LeftClick = 4;
	    RightClick = 5;
        Scroll = 6;
        SelectWindow = 7;
        StopAudioTransmission = 8;
        StopVideoTransmission = 9;
        StopAudioAndVideoTransmission = 10;
        StartAudioTransmission = 11;
        StartVideoTransmission = 12;
        StartAudioAndVideoTransmission = 13;
    }

    required CommandType commandType = 1;
    optional float x = 2;
    optional float y = 3;
}

message Video
{
    optional bytes image = 1;
}

message Audio
{
    optional bytes sound = 1;
}

message Info
{
    optional bytes deviceName = 1;
    optional int32 width = 2;
    optional int32 height = 3;
    optional int32 portAvailable = 4;
}

message Resolution
{
    optional int32 width = 1;
    optional int32 height = 2;
}

message Request
{
    enum RequestType
    {
        Movie = 1;
        Music = 2;
        File = 3;
        RemoveMovie = 4;
        RemoveMusic = 5;
        RemoveFile = 6;
    }
    required RequestType requestType = 1;
    required bytes filePath = 2;//'*'表示所有
}

message RequestFeedback
{
    required bytes filePath = 1;
}

message SharedFile
{
    optional bytes fileName = 1;
    required int64 fileLength = 2;
    required bytes content = 3;
}

message SharedMessage
{
    required bytes content = 1;
}

message KeyboardEvent
{
    required int32 keyCode = 1;
}
